--- a/src/app/components/user/user.component.html
+++ b/src/app/components/user/user.component.html
@@ -1,16 +1,15 @@
-<h2>User Registration</h2>
-<form (ngSubmit)="register()">
+<h2 *ngIf="!isLoggedIn()">User Registration</h2>
+<form *ngIf="!isLoggedIn()" (ngSubmit)="register()">
   <input [(ngModel)]="user.username" name="username" placeholder="Username" />
   <input [(ngModel)]="user.password" name="password" type="password" placeholder="Password" />
   <button type="submit">Register</button>
 </form>
 
-<h2>User Login</h2>
-<form (ngSubmit)="login()">
+<h2 *ngIf="!isLoggedIn()">User Login</h2>
+<form *ngIf="true" (ngSubmit)="login()">
   <input [(ngModel)]="credentials.username" name="username" placeholder="Username" />
   <input [(ngModel)]="credentials.password" name="password" type="password" placeholder="Password" />
   <button type="submit">Login</button>
 </form>
 
-<button (click)="logout()">Logout</button>
-
+<button *ngIf="isLoggedIn()" (click)="logout()">Logout</button>
